--- a/index.html
+++ b/index.html
@@ -341,11 +341,23 @@
                   ></div>
                 </div>
               </div>
+              <div class="progress">
+                <span class="skill">Material UI <i class="val">85%</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="75"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
             </div>
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="progress">
-                <span class="skill">PHP <i class="val">80%</i></span>
+                <span class="skill">PYTHON <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -358,7 +370,19 @@
               </div>
 
               <div class="progress">
-                <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                <span class="skill">React <i class="val">90%</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <div class="progress">
+                <span class="skill">Angular <i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -371,7 +395,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Photoshop <i class="val">55%</i></span>
+                <span class="skill">Django/ Flask <i class="val">95%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
