added projects have done

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     title="Web 3"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://zummitafrica.com/" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -501,7 +501,7 @@
                     title="Web 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://bling-hotel.web.app" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -523,7 +523,7 @@
                     title="Web 3"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://kennedy-ben.github.io/React-App/" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
