--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <div class="col-lg-6" data-aos="fade-up">
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
-                <h4>Alex Smith</h4>
+                <h4>Kennedy Bernard</h4>
                 <p>
                   <em
                     >I am passionate Full Stack Developer with a knack for
